force-app/main/default/objects/Forecast__c/fields/Completed_Target__c.field-meta.xml
<CustomField>
    <fullName>Completed_Target__c</fullName>
    <label>Completed Target</label>
    <summaryForeignKey>Forecast_Item__c.Master_Forecast__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>