force-app/main/default/objects/Forecast__c/fields/Completion_Rates__c.field-meta.xml
<CustomField>
    <fullName>Completion_Rates__c</fullName>
    <formula>0.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Rates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>