force-app/main/default/objects/Forecast__c/fields/Sales_Man__c.field-meta.xml
<CustomField>
    <fullName>Sales_Man__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Man</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Forecast</relationshipName>
    <type>Lookup</type>
</CustomField>