force-app/main/default/objects/Forecast__c/validationRules/Validation_For_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_For_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c  &gt;  End_Date__c</errorConditionFormula>
    <errorMessage>Start Date cannot be greater than the End Date</errorMessage>
</ValidationRule>